[fix] body right white space

--- a/style/main-visual.css
+++ b/style/main-visual.css
@@ -1,7 +1,3 @@
-.main-visual {
-
-}
-
 .main-visual__image {
   width: 100%;
   height: 650px;
@@ -9,10 +5,6 @@
   background-size: cover;
   background-position: center;
   text-align: center;
-}
-
-.heading {
-  
 }
 
 .heading__title {
