--- a/style/resposive.css
+++ b/style/resposive.css
@@ -1,14 +1,21 @@
 @media screen and (max-width:768px) {
   body {
-    width: 90%;
+    width: 100%;
+    margin-right: 0;
     display: block;
   }
+
   .header {
     height: 50px;
   }
 
   .header__inner {
     width: 90%;
+  }
+
+  h1 .header__logo {
+    height: 50px;
+    margin-top: 3px;
   }
 
   .header__link {
@@ -43,6 +50,19 @@
   }
   .icon span:nth-of-type(3) {
     bottom: 7px;
+  }
+
+  .main-visual__image {
+    background-image: url(../img/code.png);
+  }
+  
+  .heading__title {
+    font-size: 40px;
+    padding-bottom: 10px;
+  }
+
+  .heading__lead {
+    font-size: 18px;
   }
 
   .section {
